--- a/ticket-platform-milestone/resources/application.properties
+++ b/ticket-platform-milestone/resources/application.properties
@@ -18,3 +18,13 @@ spring.thymeleaf.suffix=.html
 #See sql queries(NOT RECCOMENDED!!!)
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# Include the error message in the response
+server.error.include-message=always
+
+# Include stack trace in the response
+server.error.include-stacktrace=always
+
+logging.level.root=INFO
+logging.level.org.springframework.web=DEBUG
+logging.level.com.yourpackage=DEBUG
